changed the structure to reflect more modern ansible best practices moved inv vars to group vars moved roles to collections and fixed playbooks added a prepare ansible host playbook to download needed roles and playbooks modified public roles and collection paths to install inside our dir structure to keep them from global installation

--- a/ansible/playbooks/role-rocky-ipa.yml
+++ b/ansible/playbooks/role-rocky-ipa.yml
@@ -1,6 +1,5 @@
 ---
 # Creates the first server for an IPA infrastructure
-# Variables for the infrastructure are in inventory/ipainventory
 # Recommended specs for the IPA systems, that scale based on number of objects:
 # CPU: 2 cores
 # Memory: 4GB
@@ -44,8 +43,8 @@
         - reload_networkmanager
 
   roles:
-    - role: ipaserver
-      state: present
+  - role: freeipa.ansible_freeipa.ipaserver
+    state: present
 
   post_tasks:
     - name: Touching run file that ansible has ran here
