--- a/ansible/playbooks/roles/pxeserver/tasks/main.yml
+++ b/ansible/playbooks/roles/pxeserver/tasks/main.yml
@@ -5,6 +5,28 @@
       - tftp-server
       - nginx
 
+- name: 'ensure /var/www'
+  file:
+    path: '/var/www'
+    state: directory
+    mode: '0755'
+    owner: root
+    group: root
+
+- name: 'ensure /var/www/html'
+  file:
+    path: '/var/www/html'
+    state: directory
+    mode: '0755'
+    owner: root
+    group: nginx
+
+- name: 'nginx configuration'
+  template:
+    src: nginx.conf.j2
+    dest: /etc/nginx/nginx.conf
+  notify: 'reload nginx'
+
 - name: 'Ensure nginx is running'
   service:
     name: nginx
