Make kickstart template work for UEFI too

--- a/scripts/libvirt-kickstart/centos8/kickstart.cfg
+++ b/scripts/libvirt-kickstart/centos8/kickstart.cfg
@@ -23,23 +23,9 @@ firewall --disabled
 selinux --permissive
 timezone --utc UTC
 bootloader --location=mbr --append="net.ifnames=0"
-                       
-zerombr
-clearpart --all
 
-part /boot --fstype xfs --size=1024 --asprimary
-part pv.01 --size=1 --grow --asprimary
-volgroup sys_vg pv.01
-
-# Initial volume sizes are small, but can be extended later
-# total: 20GB, leaves some space for expansion
-
-logvol /                --fstype xfs                      --name=root          --vgname=sys_vg --size=6144
-logvol /home            --fstype xfs  --fsoptions="nodev" --name=home          --vgname=sys_vg --size=1024
-logvol /var             --fstype xfs                      --name=var           --vgname=sys_vg --size=4096
-logvol /var/log/        --fstype xfs                      --name=var_log       --vgname=sys_vg --size=4096
-logvol /var/log/audit   --fstype xfs                      --name=var_log_audit --vgname=sys_vg --size=2048
-logvol swap             --fstype swap                     --name swap          --vgname sys_vg --size=2048
+# Partition configuration created in preinstall script
+%include /tmp/part-include
 
 %packages
 @^minimal-environment
@@ -81,6 +67,45 @@ ln -sf /dev/null /etc/udev/rules.d/80-net-name-slot.rules
 
 # Possibly: add to sudoers?
 )
+%end
+%pre
+(
+#!/bin/sh
+set -x
+PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin
+
+# UEFI partitioning
+if [ -d /sys/firmware/efi ]; then
+    cat >/tmp/part-include <<EOF
+clearpart --all --initlabel --drives vda
+part /boot --fstype xfs --size 1024 --asprimary --ondisk vda
+part /boot/efi --fstype vfat --size 512 --asprimary --ondisk vda
+EOF
+else # BIOS Partitioning
+    cat >/tmp/part-include <<EOF
+clearpart --all --drives=vda
+zerombr
+part /boot --fstype xfs --size=1024 --asprimary --ondisk=vda
+EOF
+fi
+
+# Common part
+cat >>/tmp/part-include <<EOF
+part pv.01 --size=1 --grow --asprimary --ondisk=vda
+volgroup sys_vg pv.01
+
+# Initial volume sizes are small, but can be extended later
+# total: 20GB, leaves some space for expansion
+
+logvol /                --fstype xfs                      --name=root          --vgname=sys_vg --size=6144
+logvol /home            --fstype xfs  --fsoptions="nodev" --name=home          --vgname=sys_vg --size=1024
+logvol /var             --fstype xfs                      --name=var           --vgname=sys_vg --size=4096
+logvol /var/log/        --fstype xfs                      --name=var_log       --vgname=sys_vg --size=4096
+logvol /var/log/audit   --fstype xfs                      --name=var_log_audit --vgname=sys_vg --size=2048
+logvol swap             --fstype swap                     --name swap          --vgname sys_vg --size=2048
+EOF
+
+) >/tmp/kickstart-pre.log 2>&1
 %end
 
 reboot --eject
