Successfully netbooting UEFI now

--- a/ansible/playbooks/roles/pxeserver/example-grub.cfg
+++ b/ansible/playbooks/roles/pxeserver/example-grub.cfg
@@ -24,7 +24,7 @@ menuentry 'Reboot' {
 }
 
 ### BEGIN /etc/grub.d/10_linux ###
-menuentry 'Install centos-8-x86_64 for testhost (DESTROYS DATA!)' --class fedora --class gnu-linux --class gnu --class os {
-	linuxefi centos-8-vmlinuz nofb net.ifnames=0 ks=http://kickstartserver.example.com/ks/generated/ks-00-50-56-ba-2b-e6-generic-centos-8-x86_64.cfg ksdevice=00:50:56:ba:2b:e6 mpath console=tty0
-	initrdefi centos-8-initrd.img
+menuentry 'Install centos-8-x86_64 for host (DESTROYS DATA!)' --class fedora --class gnu-linux --class gnu --class os {
+	linuxefi centos-8-x86_64-vmlinuz nofb ks=http://10.21.3.31/testkickstart.cfg  mpath console=tty0
+	initrdefi centos-8-x86_64-initrd.img
 }
