--- a/ansible/playbooks/vars/RedHat.yml
+++ b/ansible/playbooks/vars/RedHat.yml
@@ -6,6 +6,7 @@ bin_sudo: /usr/bin/sudo
 kernel_boot_options: audit=1
 grub_config_path_link: /etc/grub2.cfg
 grub_config_path_efi: /etc/grub2-efi.cfg
+ipatype: client
 
 # Removing TFTP for now because there will likely be tftp/pxe servers
 remove_packages:
