--- a/ansible/playbooks/requirements.yml
+++ b/ansible/playbooks/requirements.yml
@@ -2,6 +2,10 @@
 collections:
   - freeipa.ansible_freeipa
   - community.general
+  - ansible.posix
+
 
 roles:
   - name: geerlingguy.mysql
+  - name: cloudalchemy.prometheus
+  - name: cloudalchemy.node-exporter
