--- a/ansible/playbooks/init-rocky-ansible-host.yml
+++ b/ansible/playbooks/init-rocky-ansible-host.yml
@@ -31,6 +31,7 @@
         {{ ( force_purge | bool ) | ternary('--force','') }}
         --role-file {{ installation_prefix }}roles/requirements.yml
         --roles-path {{ installation_prefix }}{{ roles_installation_dir }}
+      changed_when: false
 
     - name: Install needed collections
       command: >
@@ -38,6 +39,7 @@
         {{ ( force_purge | bool ) | ternary('--force-with-deps','') }}
         -r {{ installation_prefix }}roles/requirements.yml
         -p {{ installation_prefix }}{{ collection_installation_dir }}
+      changed_when: false
 
     - name: cleanup old ssh known_hosts - remove
       file:
