lnting, removing redundant requirements

--- a/ansible/playbooks/tasks/authentication.yml
+++ b/ansible/playbooks/tasks/authentication.yml
@@ -62,7 +62,7 @@
       service:
         name: oddjobd
         state: started
-        enabled: yes
+        enabled: true
   when:
     - ansible_facts['os_family'] == 'RedHat'
     - ansible_facts['distribution_major_version'] == '8'
