--- a/ansible/playbooks/role-rocky-monitoring.yml
+++ b/ansible/playbooks/role-rocky-monitoring.yml
@@ -17,7 +17,7 @@
     - name: Install SELinux packages
       package:
         name: python3-policycoreutils.noarch
-        state: latest
+        state: present
 
   role:
     - role: cloudalchemy.prometheus
