--- a/ansible/playbooks/init-rocky-install-kvm-hosts.yml
+++ b/ansible/playbooks/init-rocky-install-kvm-hosts.yml
@@ -28,14 +28,13 @@
     # Install KVM packages
     - name: Installing KVM Packages
       package:
-        name: "{{ item }}"
+        name:
+          - qemu-kvm
+          - libvirt
+          - libvirt-python
+          - libguestfs-tools
+          - virt-install
         state: present
-      with_items:
-        - qemu-kvm
-        - libvirt
-        - libvirt-python
-        - libguestfs-tools
-        - virt-install
 
     - name: Enable and Start libvirtd
       systemd:
