grub tasks moved to separate file

--- a/ansible/playbooks/init-rocky-system-config.yml
+++ b/ansible/playbooks/init-rocky-system-config.yml
@@ -34,7 +34,10 @@
       import_tasks: tasks/authentication.yml
 
     - name: Configure auditd
-      include: tasks/auditd.yml
+      import_tasks: tasks/auditd.yml
+
+    - name: Configure grub
+      import_tasks: tasks/grub.yml
 
   post_tasks:
     - name: Touching run file that ansible has ran here
