--- a/ansible/playbooks/vars/adminusers.yml
+++ b/ansible/playbooks/vars/adminusers.yml
@@ -1,62 +1,62 @@
 ---
 users:
-  - name: label
+  - name: label2
     first: Louis
     last: Abel
     email: label@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Infrastructure IdM Manager
     loginshell: /bin/bash
-  - name: gmk
+  - name: gmk2
     first: Gregory
     last: Kurtzer
     email: gmk@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Executive Director
     loginshell: /bin/bash
-  - name: brian
+  - name: brian2
     first: Brian
     last: Clemens
     email: brian@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Project Manager
     loginshell: /bin/bash
-  - name: hbjy
+  - name: hbjy2
     first: Hayden
     last: Young
     email: hbjy@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Web & Branding Manager
     loginshell: /bin/bash
-  - name: jorp
+  - name: jorp2
     first: Jordan
     last: Pisaniello
     email: jorp@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Community Manager
     loginshell: /bin/bash
-  - name: neil
+  - name: neil2
     first: Neil
     last: Hanlon
     email: neil@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Infrastructure Manager
     loginshell: /bin/bash
-  - name: rlh
+  - name: rlh2
     first: R. Leigh
     last: Hennig
     email: rlh@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Operations Manager
     loginshell: /bin/bash
-  - name: rfelsburg
+  - name: rfelsburg2
     first: Rob
     last: Felsburg
     email: rfelsburg@rockylinux.org
     password: ThisIsNotMyPassword1!
     title: Operations Manager
     loginshell: /bin/bash
-  - name: tg
+  - name: tg2
     first: Taylor
     last: Goodwill
     email: tg@rockylinux.org
