issue-183 - add chrony server/client playbooks

--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -22,3 +22,9 @@ build-a-box ansible_host=10.100.1.112
 [ipsilon]
 idp001 ansible_host=10.100.x.x
 
+[chronyservers]
+chronyd001 ansiblehost=10.100.3.110
+chronyd002 ansiblehost=10.200.3.111
+
+[chronyclients]
+build-abox asnsiblehost=10.100.x.x
