--- a/ansible/playbooks/vars/chrony.yml
+++ b/ansible/playbooks/vars/chrony.yml
@@ -25,9 +25,9 @@ chrony_service_state: started
 chrony_service_enabled: yes
 
 # default internet timeservers to use
-chrony_timeservers: []
-   - 0.pool.ntp.org 
-   - 1.pool.ntp.org 
+chrony_timeservers:
+   - 0.pool.ntp.org
+   - 1.pool.ntp.org
    - 2.pool.ntp.org
 
 # is chrony ntp server - allows client connections
