--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -23,8 +23,6 @@ build-a-box ansible_host=10.100.1.112
 idp001 ansible_host=10.100.x.x
 
 [chronyservers]
-chronyd001 ansiblehost=10.100.3.110
-chronyd002 ansiblehost=10.200.3.111
+chrony001 ansiblehost=10.100.3.110
+chrony002 ansiblehost=10.200.3.111
 
-[chronyclients]
-build-abox asnsiblehost=10.100.x.x
