--- a/ansible/playbooks/vars/chrony.yml
+++ b/ansible/playbooks/vars/chrony.yml
@@ -26,8 +26,8 @@ chrony_service_enabled: true
 
 # default internet timeservers to use
 chrony_timeservers:
-  - chrony001.rockylinux.com
-  - chrony002.rockylinux.com
+  - chrony001.rockylinux.org
+  - chrony002.rockylinux.org
 
 # is chrony ntp server - allows client connections
 chrony_server: false
