--- a/ansible/playbooks/vars/chronyserver.yml
+++ b/ansible/playbooks/vars/chronyserver.yml
@@ -2,8 +2,8 @@
 
 # default internet timeservers to use
 chrony_timeservers:
-  - chrony001.rockylinux.com
-  - chrony002.rockylinux.com
+  - chrony001.rockylinux.org
+  - chrony002.rockylinux.org
 
 # is chrony ntp server - allows client connections
 chrony_server: true
