--- a/.github/workflows/diagrams.yaml
+++ b/.github/workflows/diagrams.yaml
@@ -6,12 +6,16 @@ on:
 
 jobs:
   build-diagrams:
-    runs-on: python:3
+    runs-on: ubuntu-latest
     timeout-minutes: 5
 
     steps:
       - name: Git Checkout
         uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -28,5 +32,3 @@ jobs:
         with:
           name: diagrams-png
           path: artifacts/*.png
-
-
