--- a/.github/workflows/diagrams.yaml
+++ b/.github/workflows/diagrams.yaml
@@ -1,11 +1,12 @@
 ---
+name: Arcitecture Diagrams
 on:
   push:
     paths:
       - 'architecture/**.py'
 
 jobs:
-  build-diagrams:
+  build-archi-diagrams:
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
