Only run the diagrams action when someone commits a diagram

--- a/.github/workflows/diagrams.yaml
+++ b/.github/workflows/diagrams.yaml
@@ -1,9 +1,9 @@
 ---
 name: Arcitecture Diagrams
-on: push
-#  push:
-#    paths:
-#      - 'architecture/**.py'
+on:
+  push:
+    paths:
+      - 'architecture/**.py'
 
 jobs:
   build-archi-diagrams:
