--- a/ansible/inventories/production/group_vars/ipaclients/main.yml
+++ b/ansible/inventories/production/group_vars/ipaclients/main.yml
@@ -1,7 +1,7 @@
 ---
 
-ipaclient_domain = rockylinux.org
-ipaclient_realm = ROCKYLINUX.ORG
-ipaadmin_principal = admin
-ipaclient_no_ntp = true
-ipaclient_mkhomedir = true
+ipaclient_domain: rockylinux.org
+ipaclient_realm: ROCKYLINUX.ORG
+ipaadmin_principal: admin
+ipaclient_no_ntp: true
+ipaclient_mkhomedir: true
