repo changes and ipa fqdn notes

--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -10,19 +10,22 @@ ipareplicas
 ipaclients
 
 # Playbook and role specific inventory hosts and groups
+# Note, for IPA collection to function, these must be fqdn
 [ipaserver]
-ipa001 ansible_host=10.100.1.110
+ipa001.rockylinux.org ansible_host=10.100.1.110
 
 [ipareplicas]
-ipa002 ansible_host=10.100.1.111
+ipa002.rockylinux.org ansible_host=10.100.1.111
 
 [ipaclients]
-build-a-box ansible_host=10.100.1.112
+build-a-box.rockylinux.org ansible_host=10.100.1.112
+idp001.rockylinux.org ansible_host=10.100.x.x
+chrony001.rockylinux.org ansiblehost=10.100.3.110
+chrony002.rockylinux.org ansiblehost=10.200.3.111
 
 [ipsilon]
-idp001 ansible_host=10.100.x.x
+idp001.rockylinux.org ansible_host=10.100.x.x
 
 [chronyservers]
-chrony001 ansiblehost=10.100.3.110
-chrony002 ansiblehost=10.200.3.111
-
+chrony001.rockylinux.org ansiblehost=10.100.3.110
+chrony002.rockylinux.org ansiblehost=10.200.3.111
