:wrench: Fix ansible YAML
Signed-off-by: nasirhm <nasirhussainm14@gmail.com>

--- a/ansible/playbooks/role-gitlab-ee.yml
+++ b/ansible/playbooks/role-gitlab-ee.yml
@@ -15,8 +15,9 @@
         name: python3-policycoreutils.noarch
         state: present
 
-  role:
+  roles:
     - role: geerlingguy.gitlab
+      state: present
       vars_files:
         - vars/gitlab.yml
 
