adding gitlab primers with ipa fixes

--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -22,6 +22,7 @@ build-a-box.rockylinux.org ansible_host=10.100.1.112
 idp001.rockylinux.org ansible_host=10.100.x.x
 chrony001.rockylinux.org ansiblehost=10.100.3.110
 chrony002.rockylinux.org ansiblehost=10.200.3.111
+git.rockylinux.org ansible_host=10.100.1.113
 
 [ipsilon]
 idp001.rockylinux.org ansible_host=10.100.x.x
@@ -29,3 +30,6 @@ idp001.rockylinux.org ansible_host=10.100.x.x
 [chronyservers]
 chrony001.rockylinux.org ansiblehost=10.100.3.110
 chrony002.rockylinux.org ansiblehost=10.200.3.111
+
+[gitlabservers]
+git.rockylinux.org ansible_host=10.100.1.113
