ipsilon missing a few vars

--- a/ansible/playbooks/role-rocky-ipsilon.yml
+++ b/ansible/playbooks/role-rocky-ipsilon.yml
@@ -5,6 +5,7 @@
   become: true
   vars_files:
   - vars/encpass.yml
+  - vars/ipsilon.yml
 
   # This is to try to avoid the handler issue in pre/post tasks
   handlers:
