--- a/ansible/playbooks/vars/gitlab.yml
+++ b/ansible/playbooks/vars/gitlab.yml
@@ -1,5 +1,5 @@
 ---
-gitlab_domain: src.rockylinux.org
+gitlab_domain: git.rockylinux.org
 gitlab_external_url: "https://{gitlab_domain}/"
 
 # Location where all the git repositories will be stored.
@@ -15,15 +15,15 @@ gitlab_ssl_certificate_key: "/etc/gitlab/ssl/{{ gitlab_domain }}.key"
 gitlab_create_self_signed_cert: "true"
 gitlab_self_signed_cert_subj: "/C=US/ST=Missouri/L=Saint Louis/O=IT/CN={{ gitlab_domain }}"
 
-# LDAP Configuration for the future
-gitlab_ldap_enabled: "false"
-gitlab_ldap_host: "example.com"
+# LDAP Configuration
+gitlab_ldap_enabled: "true"
+gitlab_ldap_host: "rockylinux.org"
 gitlab_ldap_port: "389"
-gitlab_ldap_uid: "sAMAccountName"
-gitlab_ldap_method: "plain"
-gitlab_ldap_bind_dn: "CN=Username,CN=Users,DC=example,DC=com"
-gitlab_ldap_password: "password"
-gitlab_ldap_base: "DC=example,DC=com"
+gitlab_ldap_uid: "uid"
+gitlab_ldap_method: "start_tls"
+gitlab_ldap_bind_dn: "uid=binder,cn=sysaccounts,cn=etc,dc=rockylinux,dc=org"
+gitlab_ldap_password: "ThisIsNotThePassword!"
+gitlab_ldap_base: "cn=users,cn=accounts,dc=rockylinux,dc=org"
 
 gitlab_time_zone: "UTC"
 
@@ -33,16 +33,16 @@ gitlab_download_validate_certs: true
 # Email and SMTP configuration (For the future)
 # Email configuration.
 gitlab_email_enabled: "false"
-gitlab_email_from: "gitlab@example.com"
+gitlab_email_from: "gitlab@rockylinux.org"
 gitlab_email_display_name: "Gitlab"
-gitlab_email_reply_to: "gitlab@example.com"
+gitlab_email_reply_to: "gitlab@rockylinux.org"
 # SMTP configuration
 gitlab_smtp_enable: "false"
 gitlab_smtp_address: "smtp.server"
 gitlab_smtp_port: "465"
 gitlab_smtp_user_name: "smtp user"
 gitlab_smtp_password: "smtp password"
-gitlab_smtp_domain: "example.com"
+gitlab_smtp_domain: "rockylinux.org"
 gitlab_smtp_authentication: "login"
 gitlab_smtp_enable_starttls_auto: "true"
 gitlab_smtp_tls: "false"
