Infrastructure GitLab Updates
In this push, we are making a decent amount of updates to the gitlab
playbooks as well as updating the README. See below for the changes:

* README updated for further clarity
* GitLab role with further reconfiguration for group lookups
* GitLab role with further reconfiguration to disable built-in nginx
* nginx configuration added and provided to work with omnibus
* GitLab variables updated

--- a/ansible/playbooks/handlers/main.yml
+++ b/ansible/playbooks/handlers/main.yml
@@ -9,6 +9,11 @@
     name: httpd
     state: restarted
 
+- name: restart_nginx
+  service:
+    name: nginx
+    state: restarted
+
 - name: reload_networkmanager
   service:
     name: NetworkManager
@@ -22,3 +27,8 @@
     name: "{{ chrony_service_name }}"
     state: restarted
   listen: "chrony service restart"
+
+- name: restart_gitlab
+  command: gitlab-ctl reconfigure
+  register: gitlab_restart
+  failed_when: gitlab_restart_handler_failed_when | bool
