--- a/ansible/playbooks/vars/gitlab.yml
+++ b/ansible/playbooks/vars/gitlab.yml
@@ -1,4 +1,5 @@
 ---
+gitlab_config_template: "etc/gitlab/rocky_gitlab.rb"
 gitlab_domain: git.rockylinux.org
 gitlab_external_url: "https://{{ gitlab_domain }}/"
 
@@ -25,6 +26,8 @@ gitlab_ldap_method: "start_tls"
 gitlab_ldap_bind_dn: "uid=binder,cn=sysaccounts,cn=etc,dc=rockylinux,dc=org"
 gitlab_ldap_password: "ThisIsNotThePassword!"
 gitlab_ldap_base: "cn=users,cn=accounts,dc=rockylinux,dc=org"
+gitlab_ldap_group_dn: "cn=groups,cn=accounts,dc=rockylinux,dc=org"
+gitlab_ldap_admin_group: "cn=gitadm,cn=groups,cn=accounts,dc=rockylinux,dc=org"
 
 gitlab_time_zone: "UTC"
 
