staging idea for koji

--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -33,3 +33,26 @@ chrony002.rockylinux.org ansiblehost=10.200.3.111
 
 [gitlabservers]
 git.rockylinux.org ansible_host=10.100.1.113
+
+# Koji System - These names and IP's are not permanent as some machines can be
+# in a different location. This is the case with ppc64le
+[koji:children]
+kojihub
+kojid
+
+[kojihub]
+hub.boxbuild.rockylinux.org ansible_host=10.100.1.200
+
+[kojid]
+x86-01.boxbuild.rockylinux.org ansible_host=10.100.1.201
+x86-02.boxbuild.rockylinux.org ansible_host=10.100.1.202
+x86-repo.boxbuild.rockylinux.org ansible_host=10.100.1.203
+aarch64-01.boxbuild.rockylinux.org ansible_host=10.100.1.204
+aarch64-02.boxbuild.rockylinux.org ansible_host=10.100.1.205
+aarch64-03.boxbuild.rockylinux.org ansible_host=10.100.1.206
+aarch64-04.boxbuild.rockylinux.org ansible_host=10.100.1.207
+aarch64-05.boxbuild.rockylinux.org ansible_host=10.100.1.208
+aarch64-06.boxbuild.rockylinux.org ansible_host=10.100.1.209
+ppc64le-01.boxbuild.rockylinux.org ansible_host=10.100.1.210
+ppc64le-02.boxbuild.rockylinux.org ansible_host=10.100.1.211
+ppc64le-03.boxbuild.rockylinux.org ansible_host=10.100.1.212
