--- a/ansible/playbooks/init-rocky-ipa-team.yml
+++ b/ansible/playbooks/init-rocky-ipa-team.yml
@@ -3,11 +3,14 @@
 - name: Create our initial users
   hosts: ipaserver
   become: false
+  gather_facts: false
   vars_files:
   - vars/encpass.yml
   - vars/users.yml
   - vars/adminusers.yml
+  - vars/svcusers.yml
   - vars/groups.yml
+  - vars/ipaprivs.yml
 
   tasks:
     - name: "Checking for user variables"
@@ -27,3 +30,6 @@
 
     - name: "Start sudo for admins"
       import_tasks: import-rockysudo.yml
+
+    - name: "Start privileges for services"
+      import_tasks: import-rockyipaprivs.yml
