--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -39,9 +39,10 @@ git.rockylinux.org ansible_host=10.100.1.113
 [koji:children]
 kojihub
 kojid
+mqtt
 
 [kojihub]
-hub.boxbuild.rockylinux.org ansible_host=10.100.1.200
+koji.boxbuild.rockylinux.org ansible_host=10.100.1.200
 
 [kojid]
 x86-01.boxbuild.rockylinux.org ansible_host=10.100.1.201
@@ -56,3 +57,6 @@ aarch64-06.boxbuild.rockylinux.org ansible_host=10.100.1.209
 ppc64le-01.boxbuild.rockylinux.org ansible_host=10.100.1.210
 ppc64le-02.boxbuild.rockylinux.org ansible_host=10.100.1.211
 ppc64le-03.boxbuild.rockylinux.org ansible_host=10.100.1.212
+
+[mqtt]
+mqtt.boxbuild.rockylinux.org ansible_host=10.100.1.213
