--- a/ansible/playbooks/init-rocky-ipa-internal-dns.yml
+++ b/ansible/playbooks/init-rocky-ipa-internal-dns.yml
@@ -7,6 +7,7 @@
   vars_files:
   - vars/encpass.yml
   - vars/rdns.yml
+  - vars/fdns.yml
 
   tasks:
     - name: "Checking for user variables"
@@ -21,3 +22,9 @@
         ipaadmin_password: '{{ ipaadmin_password }}'
         name: '{{ item }}'
       with_items: '{{ rdns }}'
+
+    - name: "Create Forward Domains"
+      freeipa.ansible_freeipa.ipadnszone:
+        ipaadmin_password: '{{ ipaadmin_password }}'
+        name: '{{ item }}'
+      with_items: '{{ fdns }}'
